oriterm_core/tests/vttest/snapshots/vttest__menu2__97x33_02_screen_11.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
This line should be the one above the bottom of the screen. Push <RETURN>                        
Origin mode test. This line should be at the bottom of the screen.
