oriterm_core/tests/vttest/snapshots/vttest__menu2__97x33_02_screen_12.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
This line should be at the top of the screen. Push <RETURN>                                      
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
Origin mode test. This line should be at the bottom of the screen.
