oriterm_core/tests/vttest/snapshots/vttest__menu2__97x33_02_screen_15.snap
---
source: oriterm_core/tests/vttest/menu2.rs
expression: text
---
AAAAA                                                                                            
AAAAA                                                                                            
AAAAA                                                                                            
AAAAA                                                                                            
                                                                                                 
                                                                                                 
                                                                                                 
           normal      bold        underscored blinking    reversed                              
                                                                                                 
stars:     **********  **********  **********  **********  **********                            
                                                                                                 
line:      ──────────  ──────────  ──────────  ──────────  ──────────                            
                                                                                                 
x'es:      xxxxxxxxxx  xxxxxxxxxx  xxxxxxxxxx  xxxxxxxxxx  xxxxxxxxxx                            
                                                                                                 
diamonds:  ◆◆◆◆◆◆◆◆◆◆  ◆◆◆◆◆◆◆◆◆◆  ◆◆◆◆◆◆◆◆◆◆  ◆◆◆◆◆◆◆◆◆◆  ◆◆◆◆◆◆◆◆◆◆                            
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
Test of the SAVE/RESTORE CURSOR feature. There should                                            
be ten characters of each flavour, and a rectangle                                               
of 5 x 4 A's filling the top left of the screen.                                                 
Push <RETURN>
